@@ -1,3 +1,8 @@
+2008-03-14  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* Correct crash on buggy geometries (Even Rouault).
+	http://trac.osgeo.org/gdal/ticket/2218
+
 2008-01-16  Bram de Greve <bram.degreve@bramz.net>
 
 	* shapefil.h, safileio.c:  add file hooks that accept UTF-8
